<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/mn_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/mn_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/myaccount" />
        <item
            android:id="@+id/mn_msg"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/mymsg" />
        <item
            android:id="@+id/mn_search"
            android:icon="@drawable/ic_location_searching_black_24dp"
            android:title="@string/carsearch" />
        <item
            android:id="@+id/mn_control"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/carcontrol" />
    </group>
</menu>