<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/oldpwd_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            android:hint="@string/modify_pwd_old"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newpwd_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:hint="@string/modify_pwd_new"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newpwd2_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:hint="@string/modify_pwd_new2"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/modify_btn"
        style="@style/CommonBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_modify_pwd" />
</RelativeLayout>